--- a/Ex03.GarageLogic/Ex03.GarageLogic.csproj
+++ b/Ex03.GarageLogic/Ex03.GarageLogic.csproj
@@ -43,9 +43,13 @@
     <Compile Include="Electric.cs" />
     <Compile Include="EnergyType.cs" />
     <Compile Include="Fuel.cs" />
+    <Compile Include="Garage.cs" />
     <Compile Include="Motorcycle.cs" />
+    <Compile Include="Owner.cs" />
     <Compile Include="Truck.cs" />
+    <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="Vehicle.cs" />
+    <Compile Include="VehicleInitializer.cs" />
     <Compile Include="Wheel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
