--- a/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -36,13 +36,15 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GarageManager.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="MenuUI.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Ex03.GarageLogic\Ex03.GarageLogic.csproj">
       <Project>{d0448fb7-790e-4d86-9764-40d992affaa5}</Project>
       <Name>Ex03.GarageLogic</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
